added powerline-gitstatus support, and configured leftonly

--- a/config.json
+++ b/config.json
@@ -17,8 +17,8 @@
 			"theme": "default"
 		},
 		"shell": {
-			"colorscheme": "default",
-			"theme": "default",
+			"colorscheme":"default",
+			"theme":  "default_leftonly",
 			"local_themes": {
 				"continuation": "continuation",
 				"select": "select"
